Change h6 to the original one

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -10,7 +10,7 @@
 
   <div style="width: 100%">
 
-    <h6 style="text-align: center;">IT Helpdesk/WebApp/MobileApp Developer Interest in data analysis</h6>
+    <h6 style="text-align: center;">IT Helpdesk Interest in data analysis</h6>
   </div>
   <br>
   <div style="text-align: center;">
