--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -10,13 +10,13 @@
 
   <div style="width: 100%">
 
-    <h6 style="text-align: center;">IT Helpdesk Interest in data analysis</h6>
+    <h6 style="text-align: center;"> Helpdesk-support/mobile-web-app developer, Interest in data analysis</h6>
   </div>
   <br>
   <div style="text-align: center;">
-    To be an added value in the growth of a company within the same field of my major. I am confident that I have
-    all the will to succeed in the mission I am responsible of. Have more than five years of mastering consultative
-    selling in multiple majors. Most of these majors were in the technical and IT fields.
+    Have more than five years of mastering consultative selling techniques in multiple majors. Most of these majors were in the
+    technical and IT fields. acquired experience within 1 year to have this Single-Page-Application. Looking to achieve
+    more in the Mobile/Web development and data analysis.
   </div>
   <br><br>
 </div>
