--- a/src/app/Components/skills/skills.component.html
+++ b/src/app/Components/skills/skills.component.html
@@ -1,9 +1,9 @@
-
+<div style="color:rgb(52, 55, 68) ; text-align: center;"> Responsive <b>Slider</b> to take a look to my Experience</div><br>
 <div class="container" id="sliderDiv">
 <ion-content id="skillsHeight">
 <ion-slides pager="true" [options]="slideOpts" >
   <ion-slide>
-    <img src="../assets/Human-Values.PNG" style="width: auto; height:300px">
+    <img src="assets/Human-Values.PNG" style="width: auto; height:300px">
   </ion-slide>
   <ion-slide>
     <img src="assets/Capture.JPG" style="width: auto; height:300px">
