--- a/src/app/Components/work-experience/work-experience.component.html
+++ b/src/app/Components/work-experience/work-experience.component.html
@@ -1,5 +1,4 @@
-<br>
-
+<div style="color:rgb(52, 55, 68) ; text-align: center;"> Responsive <b>Slider</b> to take a look to my Experience</div><br>
 <ion-content id="workHeight" style="width: 400 px; margin:0;  ">
   <ion-slides pager="true" [options]="slideOpts">
     <ion-slide>
