--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
 
 
 
-<div style="width:30%; margin: 0 auto;">
+<div style="width:40%; margin: 0 auto;" id="linksDiv">
 
   <!-- Facebook -->
   <a style="color: #3b5998;" href="https://www.facebook.com/" role="button"><i class="fab fa-facebook-f fa-lg"></i></a>
